Text Mining assignment-1

--- a/text-mining/Cohort3-C5-Assignment1/C5_Assignment.ipynb
+++ b/text-mining/Cohort3-C5-Assignment1/C5_Assignment.ipynb
@@ -27,10 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,11 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "df = pd.read_csv(\"modified_song_lyrics.csv\")\n",
+    "\n",
+    "#df.head()"
    ]
   },
   {
@@ -68,10 +74,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "count_vectorizer = CountVectorizer(binary=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -84,28 +93,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(94, 2301)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = count_vectorizer.fit_transform(df['lyric'])\n",
+    "X.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "query1 = 'beautiful'\n",
     "query2 = 'girl'\n",
     "# To get list of all doc containing a word, we do it in the following way\n",
-    "list_q1 = X[:,vectorizer.vocabulary_[query1]]\n",
+    "list_q1 = X[:,count_vectorizer.vocabulary_[query1]]\n",
     "# Step 5. Do the same for 'query2' and store it in 'list_q2'\n",
-    "list_q2 = X[:,vectorizer.vocabulary_[query2]]"
+    "list_q2 = X[:,count_vectorizer.vocabulary_[query2]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -134,10 +157,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Teardrops On My Guitar\n",
+      "A Place In This World\n",
+      "Stay Beautiful\n",
+      "Mary's Song (Oh My My My)\n",
+      "I'm Only Me When I'm With You\n",
+      "Invisible\n",
+      "Fifteen\n",
+      "Hey Stephen\n",
+      "White Horse\n",
+      "You Belong With Me\n",
+      "The Way I Loved You\n",
+      "Back To December\n",
+      "Speak Now\n",
+      "Dear John\n",
+      "Innocent\n",
+      "Last Kiss\n",
+      "Superman\n",
+      "Holy Ground\n",
+      "Sad Beautiful Tragic\n",
+      "Everything Has Changed (Ft. Ed Sheeran)\n",
+      "Begin Again\n",
+      "Girl at Home\n",
+      "Blank Space\n",
+      "Style\n",
+      "How You Get The Girl\n",
+      "End Game (Ft. Ed Sheeran & Future)\n",
+      "So It Goes...\n",
+      "King of My Heart\n"
+     ]
+    }
+   ],
+   "source": [
+    "# OR Operation\n",
+    "for i in range(list_q1.shape[0]):\n",
+    "    if list_q1[i]==1 or list_q2[i]==1:\n",
+    "        print(df.iloc[i,1])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,10 +223,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -174,10 +239,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tfidf_vectorizer = TfidfVectorizer()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -190,10 +257,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(94, 2301)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = tfidf_vectorizer.fit_transform(df['lyric'])\n",
+    "X.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -205,11 +286,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2301)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "query = \"Take it easy, with me\""
+    "query = \"Take it easy, with me\"\n",
+    "query_vec = tfidf_vectorizer.transform([query])\n",
+    "\n",
+    "query_vec.shape"
    ]
   },
   {
@@ -221,21 +316,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "\n",
+    "results = cosine_similarity(X, query_vec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Song --  Breathe (Ft. Colbie Caillat)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print Name of the song\n",
+    "song_index = np.argmax(results.reshape((-1,)))\n",
+    "print('Song -- ', df.iloc[song_index,1]) # add song name here "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Print Name of the song\n",
-    "song_index = np.argmax(results.reshape((-1,)))\n",
-    "print('Song -- ',) # add song name here "
-   ]
   },
   {
    "cell_type": "code",
@@ -261,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
