--- a/text-mining/miniproject/miniproject/2019AIML622_miniproject2.ipynb
+++ b/text-mining/miniproject/miniproject/2019AIML622_miniproject2.ipynb
@@ -23,11 +23,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ml-latest-small/ratings.csv\n",
+      "ml-latest-small/links.csv\n",
+      "ml-latest-small/tags.csv\n",
+      "ml-latest-small/movies.csv\n",
+      "ml-latest-small/README.txt\n",
+      "Finish Load Data!!\n"
+     ]
+    }
+   ],
    "source": [
-    "# "
+    "import os\n",
+    "import sys\n",
+    "import numpy as np # linear algebra\n",
+    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "%matplotlib inline\n",
+    "\n",
+    "np.seterr('ignore')\n",
+    "\n",
+    "mod = sys.modules[__name__]\n",
+    "\n",
+    "## reading the data file names available \n",
+    "for dirname, _, filenames in os.walk('ml-latest-small'):\n",
+    "    for filename in filenames:\n",
+    "        print(os.path.join(dirname, filename))\n",
+    "        \n",
+    "\n",
+    "for dirname, _, filenames in os.walk('ml-latest-small'):\n",
+    "    for filename in filenames:\n",
+    "        if filename.split('.')[1] == 'csv':\n",
+    "            name = filename.split('.')[0]\n",
+    "            data_path = os.path.join(dirname, filename)\n",
+    "            setattr(mod, name, pd.read_csv(data_path))      \n",
+    "\n",
+    "print(\"Finish Load Data!!\")        "
    ]
   },
   {
@@ -105,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
